	gschem/src/gschem_dialog.c, gschem/src/x_menus.c, 
	gschem/src/x_window.c: Applied a few patches from Ivan Stankovic:
	[PATCH] Make recent files code and dialog positions code
                use gschem_atexit
	[PATCH] Implement gschem_atexit()
	[PATCH] Improve recent files support

2007-06-09 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* src/x_menus.c: Avoid writting '\r' to files on MinGW.

	Applied patch #1733826 from Cesar Strauss. Thanks.
	When using the "w" mode in fopen, MinGW translates LF into CR-LF. 
	This creates havoc when reading the same file again, when sharing 
	schematics files with other systems, and when placing them in a VCS.

	This can be avoided by using the "wb" mode. The "b" is ignored on 
	all POSIX conforming systems, according to these sources:

	http://www.die.net/doc/linux/man/man3/fopen.3.html
	http://www.opengroup.org/onlinepubs/009695399/functions/fopen.html

	There are other ways, however. Adding

	#include <fcntl.h>
	int _fmode = _O_BINARY;

	on some source file should work as well. Another way is linking 
	against the MinGW supplied binmode.o, which does exactly that.

	* src/x_image.c: Added EPS support.

	Applied patch #1713747 (with minor tweaks) from Wojciech Kazubski 
	adding support for EPS when writing an image. Thanks.

	* scheme/gschem.c: Changed nil by #f.

	Nil is no longer supported by guile 1.8. Applied patch from
	Peter Clifton changing nil by #f. Thanks.
	Note there are still some files using nil.

	* src/x_compselect.c: Set alternative button order after buttons
	are created.

	Apply patch from Cesar Strauss, moving the 
	gtk_dialog_set_alternative_button_order call after buttons are 
	created, in the component selector window. Thanks.

2007-06-04 Peter Brett <peter@peter-b.co.uk>

	* src/g_funcs.c, src/g_hook.c, src/g_keys.c, src/g_rc.c: Replace
	deprecated Guile functions & macros.

	Replace deprecated SCM_STRINGP, SCM_INUM, SCM_INUMP & SCM_MAKINUM
	with recommended equivalents for Guile 1.8.
